hunspell: downgrade to java 11 after cherry-picking