@@ -20,6 +20,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 /** An object representing *.dic file entry with its word, flags and morphological data. */
 public abstract class DictEntry {
@@ -46,7 +47,8 @@ public abstract class DictEntry {
   @Override
   public boolean equals(Object o) {
     if (this == o) return true;
-    if (!(o instanceof DictEntry that)) return false;
+    if (!(o instanceof DictEntry)) return false;
+    DictEntry that = (DictEntry) o;
     return stem.equals(that.stem)
         && getMorphologicalData().equals(that.getMorphologicalData())
         && getFlags().equals(that.getFlags());
@@ -57,7 +59,9 @@ public abstract class DictEntry {
     return Objects.hash(stem, getFlags(), getMorphologicalData());
   }
 
-  /** @return the stem word in the dictionary */
+  /**
+   * @return the stem word in the dictionary
+   */
   public String getStem() {
     return stem;
   }
@@ -90,7 +94,7 @@ public abstract class DictEntry {
     return Arrays.stream(data.split(" "))
         .filter(s -> s.startsWith(key))
         .map(s -> s.substring(3))
-        .toList();
+        .collect(Collectors.toList());
   }
 
   static DictEntry create(String stem, String flags) {
